# qhdata

./: .flake8  README.md  pyproject.toml
qhdata/: __init__.py  const.py  dc.py  function.py  hall.py  hf.py  spactra.py  util.py  vdp.py
qhdata/hall/: __init__.py  _util.py  basic.py  stats.py
