[tool.poetry]
name = "qhdata"
version = "0.1.1"
description = "Utilities for data-driven analysis of experimental data."
authors = ["Yunhyeon Jeong <yunhyon.jong.s3@dc.tohoku.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8.1"
numpy = "^1.21"
scipy = "^1.8"

[tool.poetry.dev-dependencies]
invoke = "^2.0.0"
flake8 = "^6.1"
pre-commit = "^3.1.1"
pytest = "^7.2.2"
mkdocs-material = "^9.1.3"
mkdocstrings = "^0.20.0"
markdown-katex = "^202112.1034"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
